test/invalid-syntax/56332_syntax_missing_then_in_if/syntax_missing_then_in_if.agu
-- Author: 56332, Student Ricardo Sobral
let check (x) : Int -> Bool =
    if x > 0 x - 1   -- Erro sintático: falta o 'then'